class Hero {

  static final int maxHp = 100;
  static final int maxMp = 100;
  String name;
  int hp = maxHp;
  int mp = maxMp;

  Hero(this.name);
}